components/policies/development/konflux-rbac/konflux-support-access/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-konflux-viewer-access
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
